--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <!-- header start -->
     <header>
       <nav>
         <ul>
@@ -21,5 +22,27 @@
 
       <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <!-- header end -->
+    <!-- main div start -->
+    <main>
+      <div id="banner">
+        <h1>Break the Ice.</h1>
+        <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+      </div>
+      <div>
+        <h4> Question 1 </h4>
+        <h4> Nullam dictum felis eu pede mollis pretium? </h4>
+        <p><a href="#"></a></p>
+        <p><a href="#"></a></p>
+
+
+      </div>
+    </main>
+    <!-- main end -->
+    <!-- footer start -->
+    <footer>
+      <p> ABC Inc </p>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
