--- a/index.html
+++ b/index.html
@@ -25,17 +25,15 @@
     <!-- header end -->
     <!-- main div start -->
     <main>
-      <div id="banner">
+      <div>
         <h1>Break the Ice.</h1>
         <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
       </div>
       <div>
-        <h4> Question 1 </h4>
-        <h4> Nullam dictum felis eu pede mollis pretium? </h4>
+        <h4>Question</h4>
+        <p><a href="#">?</a></p>
+        <h4>Answer</h4>
         <p><a href="#"></a></p>
-        <p><a href="#"></a></p>
-
-
       </div>
     </main>
     <!-- main end -->
