--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div>
         <h4>Question</h4>
-        <p><a href="#">?</a></p>
+        <p><a href="#"></a></p>
         <h4>Answer</h4>
         <p><a href="#"></a></p>
       </div>
